added mardkown-notes-tree to autogenerate folder stree markdown

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "meteor run",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
-    "visualize": "meteor --production --extra-packages bundle-visualizer"
+    "visualize": "meteor --production --extra-packages bundle-visualizer",
+    "build:folder-tree": "markdown-notes-tree"
   },
   "dependencies": {
     "@babel/runtime": "^7.7.6",
@@ -18,5 +19,8 @@
       "server": "server/main.js"
     },
     "testModule": "tests/main.js"
+  },
+  "devDependencies": {
+    "markdown-notes-tree": "^1.8.0"
   }
 }
