--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "testModule": "tests/main.js"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "bootstrap": "^4.4.1",
     "chai": "^4.2.0",
     "jquery": "^3.4.1",
