--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
+    "lint:style": "stylelint \"**/*.scss\"",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
     "@babel/runtime": "^7.7.6",
     "bcrypt": "^4.0.1",
-    "meteor-node-stubs": "^1.0.0"
+    "meteor-node-stubs": "^1.0.0",
+    "stylelint-config-sass-guidelines": "^7.0.0"
   },
   "meteor": {
     "mainModule": {
@@ -26,6 +28,8 @@
     "puppeteer": "^2.1.1",
     "sinon": "^9.0.1",
     "snazzy": "^8.0.0",
-    "standard": "^14.3.3"
+    "standard": "^14.3.3",
+    "stylelint": "^13.2.1",
+    "stylelint-config-standard": "^20.0.0"
   }
 }
