.github workflows stylelint updated

--- a/.github/workflows/stylelint.yml
+++ b/.github/workflows/stylelint.yml
@@ -1,5 +1,6 @@
 name: Stylelint
-on: [pull_request]
+
+on: [push,pull_request]
 
 jobs:
   linters:
@@ -8,7 +9,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      - name: Setup stylelint
       - uses: actions-hub/stylelint@v1.1.2
         env:
           PATTERN: "**/*.scss"
           INDENT_SPACES: 4
+      - name: Run stylelint
+      - run: stylelint
+
+
