--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "test": "meteor test --once --driver-package meteortesting:mocha",
-    "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
-    "build:folder-tree": "markdown-notes-tree",
+    "test:once": "meteor test --once --driver-package meteortesting:mocha",
+    "test:app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
+    "lint:code": "standard | snazzy",
     "lint:style": "stylelint \"**/*.scss\"",
+    "build:folder": "markdown-notes-tree",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
