--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test:app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "lint:code": "standard | snazzy",
     "lint:style": "stylelint \"**/*.scss\"",
+    "lint:markdown": "markdownlint \"**/*.md\"",
     "build:folder": "markdown-notes-tree",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
@@ -24,11 +25,12 @@
     "testModule": "tests/main.js"
   },
   "devDependencies": {
-    "markdown-notes-tree": "^1.8.0",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "bootstrap": "^4.4.1",
     "chai": "^4.2.0",
     "jquery": "^3.4.1",
+    "markdown-notes-tree": "^1.8.0",
+    "markdownlint-cli": "^0.22.0",
     "popper.js": "^1.16.1",
     "puppeteer": "^2.1.1",
     "sinon": "^9.0.1",
