--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/runtime": "^7.7.6",
     "bcrypt": "^4.0.1",
     "meteor-node-stubs": "^1.0.0",
+    "sass": "^1.26.3",
     "stylelint-config-sass-guidelines": "^7.0.0"
   },
   "meteor": {
