--- a/settings.json
+++ b/settings.json
@@ -5,21 +5,12 @@
     }
   },
   "oauth": {
-    "clientId": "teacher-application-id",
-    "secret": "abcdefghijklmnopabcdefghijklmnop",
+    "clientId": "iwtu4JCmyTDGg3eg6",
+    "secret": "xKX9q8ZQwaNdHoKcLywyrJeNh3T8F4Gk",
     "dialogUrl": "http://localhost:9090/oauth/authorize",
     "accessTokenUrl": "http://localhost:9090/oauth/token",
     "authorizeUrl": "http://localhost:9090/oauth/authorize",
     "identityUrl": "http://localhost:9090/oauth/ident",
     "redirectUrl": "http://localhost:5555/_oauth/lea"
-  },
-  "fixtures": {
-    "accounts": [{
-      "username": "admin",
-      "password": "password",
-      "firstName": "Anton",
-      "lastName": "Administrator",
-      "email": "admin@leaonline.de"
-    }]
   }
 }
