--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,10 @@
     },
     "hosts": {
       "otulea": {
-        "url": "localhost:3000"
+        "url": "localhost:3000",
+        "methods": {
+          "generateUser": "users.methods.generate"
+        }
       }
     }
   },
