--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -83,13 +83,87 @@ jobs:
     runs-on: ubuntu-latest
     needs: [lintcode,lintstyle,lintdocs]
     steps:
-      - name: checkout
+
+     # CHECKOUTS
+      - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Checkout leaonline:corelib repo
+        uses: actions/checkout@v2
+        with:
+          repository: leaonline/corelib
+          path: github/corelib
+
+     # -------------------------------------------------------------------------
+     # We will need those repose later when the respective features are added
+     # -------------------------------------------------------------------------
+
+     # - name: Checkout leaonline:testing repo
+     #   uses: actions/checkout@v2
+     #   with:
+     #     repository: leaonline/testing
+     #     path: github/testing
+
+     # - name: Checkout leaonline:utils repo
+     #   uses: actions/checkout@v2
+     #   with:
+     #     repository: leaonline/utils
+     #     path: github/utils
+
+     # - name: Checkout leaonline:ui repo
+     #   uses: actions/checkout@v2
+     #   with:
+     #     repository: leaonline/ui
+     #     path: github/ui
+
+     # - name: Checkout leaonline:service-registry repo
+     #   uses: actions/checkout@v2
+     #   with:
+     #     repository: leaonline/service-registry
+     #     path: github/service-registry
+
+      - name: Checkout leaonline:theme repo
+        uses: actions/checkout@v2
+        with:
+          repository: leaonline/theme
+          path: github/theme
+
+      # CACHING
+      - name: Install Meteor
+        id: cache-meteor-install
+        uses: actions/cache@v2
+        with:
+          path: ~/.meteor
+          key: v1-meteor-${{ hashFiles('.meteor/versions') }}
+          restore-keys: |
+                v1-meteor-
+
+      - name: Cache NPM dependencies
+        id: cache-meteor-npm
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: v1-npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+                v1-npm-
+
+      - name: Cache Meteor build
+        id: cache-meteor-build
+        uses: actions/cache@v2
+        with:
+          path: |
+            .meteor/local/resolver-result-cache.json
+            .meteor/local/plugin-cache
+            .meteor/local/isopacks
+            .meteor/local/bundler-cache/scanner
+          key: v1-meteor_build_cache-${{ github.ref }}-${{ github.sha }}
+          restore-key: |
+            v1-meteor_build_cache-
 
       - name: Setup meteor
         uses: meteorengineer/setup-meteor@v1
         with:
-          meteor-release: '1.9.2'
+          meteor-release: '2.2'
 
       - run: meteor npm install
       - run: sh ./test.sh -c
