routes fix route label translation

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "public": {
     "app": {
-      "name": "lea.online teacher"
+      "name": "lea. Dashboard"
     },
     "hosts": {
       "otulea": {
