feature(login): request account form implemented

--- a/settings.json
+++ b/settings.json
@@ -40,5 +40,12 @@
         "getAll": "methods.getAll"
       }
     }
+  },
+  "accounts": {
+    "request": {
+      "from": "system@example.com",
+      "subject": "Anfrage für Zugang",
+      "to": ["admin@example.com"]
+    }
   }
 }
