--- a/settings.json
+++ b/settings.json
@@ -12,8 +12,8 @@
         "methods": {
           "generateUser": "users.methods.generate",
           "userExists": "user.methods.exist",
-          "getFeedback": "feedback.methods.getForUsers",
-          "recentFeedback": "feedback.methods.recent"
+          "getRecords": "record.methods.getForUsers",
+          "recentCompleted": "session.methods.recentCompleted"
         }
       },
       "content": {
