--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
     "meteor-node-stubs": "^1.1.0",
+    "njwt": "^1.2.0",
     "simpl-schema": "^1.12.0"
   },
   "meteor": {
