--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/runtime": "^7.16.5",
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
+    "marked": "^4.0.12",
     "meteor-node-stubs": "^1.1.0",
     "njwt": "^1.2.0",
     "simpl-schema": "^1.12.0"
