--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "public": {
     "issueMail": "mail@example.com",
-    "debug": ["class"],
+    "debug": ["class", "visualization"],
     "app": {
       "name": "lea. Dashboard",
       "label": "apps.dashboard.title",
