--- a/.github/workflows/test_suite.yml
+++ b/.github/workflows/test_suite.yml
@@ -13,20 +13,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: setup node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: '12.x'
+        node-version: 14
 
     - name: cache dependencies
       uses: actions/cache@v1
       with:
         path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        key: ${{ runner.os }}-node-14-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
-          ${{ runner.os }}-node-
+          ${{ runner.os }}-node-14-
 
     - run: npm install
     - run: npm run lint:code
@@ -37,20 +37,20 @@ jobs:
     needs: [lintcode]
     steps:
     - name: checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: setup node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: '12.x'
+        node-version: 14
 
     - name: cache dependencies
-      uses: actions/cache@v1
+      uses: actions/cache@v3
       with:
         path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        key: ${{ runner.os }}-node-14-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
-          ${{ runner.os }}-node-
+          ${{ runner.os }}-node-14-
     - run: npm install
     - run: npm run lint:style
 
@@ -60,20 +60,20 @@ jobs:
     needs: [lintcode,lintstyle]
     steps:
     - name: checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: setup node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: '12.x'
+        node-version: 14
 
     - name: cache dependencies
-      uses: actions/cache@v1
+      uses: actions/cache@v3
       with:
         path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        key: ${{ runner.os }}-node-14-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
-          ${{ runner.os }}-node-
+          ${{ runner.os }}-node-14-
 
     - run: npm install
     - run: npm run lint:markdown
@@ -86,16 +86,16 @@ jobs:
 
      # CHECKOUTS
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Checkout leaonline:corelib repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: leaonline/corelib
           path: github/corelib
 
       - name: Checkout leaonline:service-registry repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: leaonline/service-registry
           path: github/service-registry
@@ -129,7 +129,7 @@ jobs:
      #     path: github/service-registry
 
       - name: Checkout leaonline:theme repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: leaonline/theme
           path: github/theme
@@ -137,39 +137,39 @@ jobs:
       # CACHING
       - name: Install Meteor
         id: cache-meteor-install
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.meteor
-          key: v1-meteor-${{ hashFiles('.meteor/versions') }}
+          key: v3-meteor-${{ hashFiles('.meteor/versions') }}
           restore-keys: |
-                v1-meteor-
+                v3-meteor-
 
       - name: Cache NPM dependencies
         id: cache-meteor-npm
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.npm
-          key: v1-npm-${{ hashFiles('package-lock.json') }}
+          key: v3-npm-${{ hashFiles('package-lock.json') }}
           restore-keys: |
-                v1-npm-
+                v3-npm-
 
       - name: Cache Meteor build
         id: cache-meteor-build
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             .meteor/local/resolver-result-cache.json
             .meteor/local/plugin-cache
             .meteor/local/isopacks
             .meteor/local/bundler-cache/scanner
-          key: v1-meteor_build_cache-${{ github.ref }}-${{ github.sha }}
+          key: v3-meteor_build_cache-${{ github.ref }}-${{ github.sha }}
           restore-key: |
-            v1-meteor_build_cache-
+            v3-meteor_build_cache-
 
       - name: Setup meteor
         uses: meteorengineer/setup-meteor@v1
         with:
-          meteor-release: '2.2'
+          meteor-release: '2.8.1'
 
       - run: meteor npm install
       - run: sh ./test.sh -o # o = once
